--- a/css/home-page.css
+++ b/css/home-page.css
@@ -17,6 +17,9 @@ a{
     max-width: 1200px;
     margin: 0 auto;
 }
+div.grey_background{
+    background-color: #ececec;
+}
 div#header{
     width:100%;
     background-color: #004c7e;
@@ -51,14 +54,16 @@ div#logo{
     background-color: #005691;
 }
 div#logo div.inner{
-    width: auto;
     height: inherit;
     margin: 0 auto;
-    max-width: 1200px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     background: url('../images/head_bg.png') right 25px no-repeat;
+}
+div#logo div.inner img{
+    width: 100%;
+    max-width: 180px;
 }
 /* logo结束 */
 /* nav开始 */
@@ -98,6 +103,7 @@ ul.down-menue{
 }
 /* nav结束 */
 /* banner开始 */
+
 div.banner.inner{
     max-width: 1200px;
     height: 400px;
@@ -114,7 +120,7 @@ div.banner div{
 }
 div.banner img{
     max-width: 1200px;
-    width: auto;
+    height: 400px;
 }
 div.banner div#front_banner{
     z-index: 10;
@@ -141,12 +147,82 @@ div.banner a.banner-button.right{
 div.banner a.banner-button.left{
     left:0;
 }
-
+h2#b_discription{
+    position: absolute;
+    right: 10%;
+    top: 70%;
+    z-index: 100;
+    color: white;
+    font-size: 30px;
+}
 /* banner结束 */
+
+/* news开始 */
+div.news.inner{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+div#news_head{
+    margin:30px 0;
+    border-bottom:3px solid #0e6bc2;
+    height: 30px;
+    width: 1200px;
+}
+div#news_head h3,a{
+    display: inline-block;
+}
+div#news_head a{
+    float: right;
+    vertical-align: bottom;
+}
+div#news_pic{
+    width: 525px;
+    height: 350px;
+    position: relative;
+}
+div#news_pic img{
+    width: 100%;
+}
+div#news_pic div{
+    width: inherit;
+    height: 30px;
+    line-height: 30px;
+    background-color: #c6d3e0;
+    position: absolute;
+    bottom: 0;
+    opacity: 0.88;
+}
+div#news_right{
+    width: 650px;
+    height: 350px;
+}
+div#news_right{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-end;
+}
+div#news_right li{
+    border-bottom: 0.6px solid grey;
+    height: 30px;
+    width: inherit;
+}
+div#news_right li a{
+    color: #032f5a;
+    font-size: 15px;
+}
+div#news_right li span{
+    color: gray;
+    float: right;
+}
+/* news结束 */
 /* 媒体查询开始 */
 @media screen and (max-width:920px){
     div#header{/*宽度小于900px不显示header*/
         display: none;
+    }
+    div#logo{
+        height: 15vh;
     }
     div#logo div.inner{
         /* logo居中 */
@@ -162,6 +238,10 @@ div.banner a.banner-button.left{
     }
     div#banner img{
         width: 100vw;
+        height: width/3;
+    }
+    div#news_pic,div#news_right{
+        width: 100%;
     }
 }
 /* 媒体查询结束 */
